# grasp

./: .gitmodules  Cargo.toml  MyEnum.cs  arrow.mos  bin.mos  bintree.mos  ccc.mos  config.ini  core_editor.mos  grasp.ini  kajla.mos  my_enum.mos  player_fsm.mos  pm.mos  pm2.mos  pm3.mos  test.mos  tmp.ast  tmp.json  tmp.txt
assets/: arrowhead.afdesign  dot.afdesign  selection-color.afdesign
docs/: input.md
egui-grid/: Cargo.toml
egui-grid/src/: sizing.rs
env/: config.ron  recent.txt
env/components/: algos.ron  binary_tree.ron  code_gen.mos  core.mos  core.ron  core_collage.mos  core_dict.mos  core_editor.mos  core_editor_components.mos  core_editor_queues.mos  core_editor_requests.mos  core_editor_select.mos  core_editor_transformers.mos  core_group.mos  core_meta.mos  core_process.mos  core_queue.mos  core_selection.mos  core_tuple.mos  core_validation.mos  test.mos
env/transformers/: generate_enum.mos
grasp_proc_macros/: .gitignore  Cargo.toml
grasp_proc_macros/src/: lib.rs
src/: core.rs  editor.rs  editor_queue_process.rs  editor_state.rs  editor_state_machine.rs  grasp.rs  grasp_common.rs  grasp_context_menu.rs  grasp_data.rs  grasp_editor_state.rs  grasp_editor_window.rs  grasp_editor_window_list.rs  grasp_queues.rs  grasp_render.rs  grasp_sense.rs  grasp_transitions.rs  grasp_update.rs  importers.rs  main.rs  math.rs  pane.rs  querying.rs  seq.rs  tile_manager.rs  transformers.rs  utilities.rs
src/core/: gui.rs  has_mosaic.rs  math.rs  queues.rs  structures.rs
src/core/gui/: components.rs  docking.rs  imgui_function_keys.rs  imgui_keys.rs  windowing.rs
src/core/math/: bezier.rs  rect2.rs  vec2.rs
src/core/structures/: errors.rs  grasp_queues.rs  lists.rs  pairs.rs
src/editor_state/: categories.rs  file_operations.rs  foundation.rs  helpers.rs  management.rs  network.rs  selection.rs  sense.rs  snapshot.rs  view.rs  windows.rs
src/importers/: cpp_importer.rs
src/math/: rect.rs  vec2.rs
src/querying/: collage.rs  querying.rs  traversal.rs  unit_tests.rs
src/transformers/: finite_state.rs  generate_enum.rs  pattern_match.rs  procedures.rs  select.rs
