[package]
name = "grasp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mosaic = { path = "../mosaic" }
egui = "0.24.0"
eframe = "0.24.0"
egui_wgpu_backend = "0.27.0"
egui_winit_platform = "0.20.0"
winit = "0.29.3"
epi = "0.17.0"
env_logger = "0.10.0"
serde = "1.0.190"
rust-ini = "0.20.0"
log = "0.4.20"
rand = "0.8.5"
egui_dock = "0.9"
egui_ui_refresh = "0.1.0"
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
quadtree_rs = "0.1.3"
itertools = "0.12.0"
open = "5.0.1"
urlencoding = "2.1.3"
rfd = "0.12.1"
egui-toast = "0.10.0"
egui_grid = { path = "./egui-grid" }
reqwest = { version = "0.11.22", features = [ "blocking", "json" ] }
iso8601-timestamp = "0.2.13"
whoami = "1.4.1"