[package]
name = "grasp"
version = "0.1.0"
edition = "2021"

[dependencies]
mosaic = { path = "../mosaic" }
grasp_proc_macros = { path = "./grasp_proc_macros" }
env_logger = "0.10.0"
serde = "1.0.190"
rust-ini = "0.20.0"
log = "0.4.20"
rand = "0.8.5"
image = { version = "0.24", features = ["jpeg", "png"] }
quadtree_rs = "0.1.3"
itertools = "0.12.0"
open = "5.0.1"
urlencoding = "2.1.3"
rfd = "0.12.1"
reqwest = { version = "0.11.22", features = [ "blocking", "json" ] }
iso8601-timestamp = "0.2.13"
whoami = "1.4.1"
lazy_static = "1.4.0"
stb_image = "0.3.0"
gl = "0.14.0"
sdl2 = { version = "0.36.0", features = [ "image" ] }
notify-rust = "4"
imgui = { version = "0.11.0", features = [ "docking" ] }
imgui-sdl2 = "0.15.3"
imgui-opengl-renderer = "0.12.1"